Closed
Bug 766250
Opened 13 years ago
Closed 13 years ago
Enable more release-time jemalloc assertions
Categories
(Core :: Memory Allocator, defect)
Tracking
()
RESOLVED
FIXED
mozilla16
People
(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)
References
Details
Attachments
(2 files)
|
6.81 KB,
patch
|
glandium
:
review+
|
Details | Diff | Splinter Review |
|
4.63 KB,
patch
|
glandium
:
review+
|
Details | Diff | Splinter Review |
Bug 764192 was pretty successful. Even if it didn't find bug 709860, it immediately pointed us to a double-free.
There are some additional assertions in jemalloc which I didn't enable because they're not related to bug 709860. But given how useful the assertions we've turned on have been, I think we might as well enable some more. I doubt there will be any measurable performance implications here.
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → justin.lebar+bug
| Assignee | ||
Updated•13 years ago
|
Depends on: jemalloc-assertions
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #634547 -
Flags: review?(mh+mozilla)
| Assignee | ||
Comment 2•13 years ago
|
||
MOZ_TEMP_INVESTIGATION is temporary, but I'm thinking now that MOZ_JEMALLOC_HARD_ASSERTS should not be.
Attachment #634548 -
Flags: review?(mh+mozilla)
| Assignee | ||
Comment 3•13 years ago
|
||
Updated•13 years ago
|
Attachment #634547 -
Flags: review?(mh+mozilla) → review+
Updated•13 years ago
|
Attachment #634548 -
Flags: review?(mh+mozilla) → review+
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/cc36f28dad83
https://hg.mozilla.org/mozilla-central/rev/4a44ebe3e8ff
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla16
You need to log in
before you can comment on or make changes to this bug.
Description
•