Bug 766250 - Part 1: Enable more release-time jemalloc assertions. r=glandium